--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h3>hello</h3>
+    <h3 id="h3Element">hello</h3>
     <h1>heyy this is nandini</h1>
 </body>
 </html>
